mash: Have chrome set itself as the wallpaper picker.

Rename WallpaperManager interface to WallpaperPicker.
Add WallpaperController::SetWallpaperPicker.

Chrome's WallpaperManager registers itself as picker on startup.
Ash's WallpaperController caches a ptr to the picker interface.
WallpaperManager interface no longer provided by Chrome.

Nix unused SetWallpaperImage return value.

BUG=670801
TEST=No wallpaper regressions in Classic ash or Mash.
R=jamescook@chromium.org,tsepez@chromium.org,xiyuan@chromium.org,

Review-Url: https://codereview.chromium.org/2559503003
Cr-Commit-Position: refs/heads/master@{#437116}

Former-commit-id: 6e6bcece082c7a57af4a436fe7599770543140a2