ash/common/wallpaper/wallpaper_controller.cc
@@ -4,7 +4,6 @@
 
 #include "ash/common/wallpaper/wallpaper_controller.h"
 
-#include "ash/common/shell_delegate.h"
 #include "ash/common/wallpaper/wallpaper_controller_observer.h"
 #include "ash/common/wallpaper/wallpaper_delegate.h"
 #include "ash/common/wallpaper/wallpaper_view.h"
@@ -17,8 +16,6 @@
 #include "base/logging.h"
 #include "base/task_runner.h"
 #include "components/wallpaper/wallpaper_resizer.h"
-#include "content/public/common/service_names.mojom.h"
-#include "services/service_manager/public/cpp/connector.h"
 #include "ui/display/manager/managed_display_info.h"
 #include "ui/display/screen.h"
 #include "ui/views/widget/widget.h"
@@ -72,7 +69,7 @@ wallpaper::WallpaperLayout WallpaperController::GetWallpaperLayout() const {
   return wallpaper::WALLPAPER_LAYOUT_CENTER_CROPPED;
 }
 
-bool WallpaperController::SetWallpaperImage(const gfx::ImageSkia& image,
+void WallpaperController::SetWallpaperImage(const gfx::ImageSkia& image,
                                             wallpaper::WallpaperLayout layout) {
   VLOG(1) << "SetWallpaper: image_id="
           << wallpaper::WallpaperResizer::GetImageId(image)
@@ -80,7 +77,7 @@ bool WallpaperController::SetWallpaperImage(const gfx::ImageSkia& image,
 
   if (WallpaperIsAlreadyLoaded(image, true /* compare_layouts */, layout)) {
     VLOG(1) << "Wallpaper is already loaded";
-    return false;
+    return;
   }
 
   current_wallpaper_.reset(new wallpaper::WallpaperResizer(
@@ -91,7 +88,6 @@ bool WallpaperController::SetWallpaperImage(const gfx::ImageSkia& image,
     observer.OnWallpaperDataChanged();
   wallpaper_mode_ = WALLPAPER_IMAGE;
   InstallDesktopControllerForAllWindows();
-  return true;
 }
 
 void WallpaperController::CreateEmptyWallpaper() {
@@ -191,16 +187,14 @@ bool WallpaperController::WallpaperIsAlreadyLoaded(
 }
 
 void WallpaperController::OpenSetWallpaperPage() {
-  WmShell* shell = WmShell::Get();
-  service_manager::Connector* connector =
-      shell->delegate()->GetShellConnector();
-  if (!connector || !shell->wallpaper_delegate()->CanOpenSetWallpaperPage())
-    return;
+  if (wallpaper_picker_ &&
+      WmShell::Get()->wallpaper_delegate()->CanOpenSetWallpaperPage()) {
+    wallpaper_picker_->Open();
+  }
+}
 
-  mojom::WallpaperManagerPtr wallpaper_manager;
-  connector->ConnectToInterface(content::mojom::kBrowserServiceName,
-                                &wallpaper_manager);
-  wallpaper_manager->Open();
+void WallpaperController::SetWallpaperPicker(mojom::WallpaperPickerPtr picker) {
+  wallpaper_picker_ = std::move(picker);
 }
 
 void WallpaperController::SetWallpaper(const SkBitmap& wallpaper,
